@@ -4,7 +4,8 @@ drop opengl.h from constants.py
 SetCaption unicode
 byte swapping in array, esp for audio
 endian check, e.g. for overlay and gl tests
-glitch in upper-left corner of testoverlay2
+glitch in upper-left corner of testoverlay2 on linux; on ppc os x large
+  corruption in top half
 
 SDL_syswm.h - platform dependent
 
